test/conformance/chainsaw/mutating-policies/request-object/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: mycm
data:
   foo: "bar"
