test/conformance/chainsaw/mutating-policies/request-object/permissions.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:secrets-request-object
  labels:
    rbac.kyverno.io/aggregate-to-reports-controller: "true"
rules:
- apiGroups:
  - ''
  resources:
  - secrets
  verbs:
  - get
  - list
  - watch
