test/conformance/chainsaw/mutating-policies/request-object/secret-mutated.yaml
apiVersion: v1
kind: Secret
metadata:
   name: mysecret
   labels:
      configmapName: mycm
      foo: bar
type: Opaque
data:
  password: MWYyZDFlMmU2N2Rm
