test/conformance/chainsaw/mutating-policies/request-object/secret.yaml
apiVersion: v1
kind: Secret
metadata:
   name: mysecret
   labels:
      configmapName: mycm
type: Opaque
data:
  password: MWYyZDFlMmU2N2Rm
