test/conformance/chainsaw/mutating-policies/request-object/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: test-policy-with-requestobj
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: policy.yaml
  - name: wait-mutating-policy-ready
    use:
      template: ../../_step-templates/mutating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: uses-requestobj
  - name: step-02
    try:
    - apply:
        file: configmap.yaml
  - name: step-03
    try:
    - apply:
        file: secret.yaml
  - name: sleep
    try:
    - sleep:
        duration: 5s
  - name: verify-secret-mutated
    try:
    - assert:
        file: secret-mutated.yaml
